src/objects/Callout__mdt.object
<CustomObject>
    <description>Custom metadata used for managing developer info for callouts by ADCVD Trigger Framework</description>
    <fields>
        <fullName>ApexClassNamespacePrefix__c</fullName>
        <description>Class name prefix if there is one. In our case, there won&apos;t be</description>
        <label>Apex Class Namespace Prefix</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexClass__c</fullName>
        <description>Name of an Apex Class used for a Callout</description>
        <inlineHelpText>Name of an Apex Class used for a Callout</inlineHelpText>
        <label>Apex Class</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterfaceType__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The type of interface for a class</description>
        <label>Interface Type</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Callout</label>
    <pluralLabel>Callouts</pluralLabel>
</CustomObject>